force-app/main/default/objects/maps__AdvRoutePriority__c/maps__AdvRoutePriority__c.object-meta.xml
<CustomObject>
    <description>These hold the criteria for bucketing objects into specific Advanced Route priorities when routing</description>
    <label>Maps Advanced Route Priority</label>
    <nameField>
        <label>Maps Advanced Route Priority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>