force-app/main/default/objects/maps__AdvRoutePriority__c/fields/maps__IsBasePriority__c.field-meta.xml
<CustomField>
    <fullName>maps__IsBasePriority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will tell us if the priority is from the base filter or not</description>
    <label>Base Priority</label>
    <type>Checkbox</type>
</CustomField>