force-app/main/default/objects/maps__AdvRoutePriority__c/fields/maps__LogicOrderOfOperations__c.field-meta.xml
<CustomField>
    <fullName>maps__LogicOrderOfOperations__c</fullName>
    <description>This is the order of operations for the priority filters</description>
    <label>Logic Order of Operations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>