force-app/main/default/objects/maps__AdvRoutePriority__c/fields/maps__Priority__c.field-meta.xml
<CustomField>
    <fullName>maps__Priority__c</fullName>
    <description>This is the priority</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>