force-app/main/default/objects/maps__AdvRoutePriority__c/fields/maps__PriorityFilters__c.field-meta.xml
<CustomField>
    <fullName>maps__PriorityFilters__c</fullName>
    <description>These are the filters used in the priority query</description>
    <label>Priority Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>