force-app/main/default/objects/maps__AdvRoutePriority__c/fields/maps__PriorityObject__c.field-meta.xml
<CustomField>
    <fullName>maps__PriorityObject__c</fullName>
    <description>This is the object the priority will check</description>
    <label>Priority Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>