force-app/main/default/objects/maps__AdvRoutePriority__c/fields/maps__PriorityQuery__c.field-meta.xml
<CustomField>
    <fullName>maps__PriorityQuery__c</fullName>
    <description>This is the query for the priority</description>
    <label>Priority Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>