force-app/main/default/objects/maps__AdvRoutePriority__c/fields/maps__RelatedAdvRouteTemplate__c.field-meta.xml
<CustomField>
    <fullName>maps__RelatedAdvRouteTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is populated if the waypoint is associated to an additional base object for a template</description>
    <label>Related Advanced Route Template</label>
    <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
    <relationshipLabel>Maps Advanced Route Priorities (Related Template)</relationshipLabel>
    <relationshipName>RelatedAdvRoutePriorities</relationshipName>
    <type>Lookup</type>
</CustomField>